Add new component createauthor and editing in index,comment

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div id="header">
-
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <button class="btn" [routerLink]="['/app-home']"><i class="fa fa-home"></i></button>
   </div>
   <app-root></app-root>
 </body>
